// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Music renders base form when props.editForm is false 1`] = `
<div>
  <div
    class="form-group"
  >
    <label
      class="form-label"
      for="title"
    >
      Title
    </label>
    <input
      class="form-control"
      id="title"
      name="title"
      placeholder="Baby Got Back"
      type="text"
      value="foo"
    />
  </div>
  <div
    class="form-group"
  >
    <label
      class="form-label"
      for="artist"
    >
      Artist
    </label>
    <input
      class="form-control"
      id="artist"
      name="artist"
      placeholder="Sir Mix-a-Lot"
      type="text"
      value="bar"
    />
  </div>
  <div
    class="form-group"
  >
    <label
      class="form-label"
      for="album"
    >
      Album
    </label>
    <input
      class="form-control"
      id="album"
      name="album"
      placeholder="Mack Daddy"
      type="text"
      value="baz"
    />
  </div>
  <div
    class="form-group"
  >
    <label
      class="form-label"
      for="category"
    >
      Category
    </label>
    <input
      class="form-control"
      id="category"
      list="categories"
      name="category"
      type="text"
      value="foo"
    />
    <datalist
      id="categories"
    >
      <option
        value="foo"
      />
      <option
        value="bar"
      />
    </datalist>
  </div>
</div>
`;

exports[`Music renders edit form when props.editForm is true 1`] = `
<div>
  <div
    class="form-group"
  >
    <label
      class="form-label"
      for="title"
    >
      Title
    </label>
    <input
      class="form-control"
      id="title"
      name="title"
      placeholder="Baby Got Back"
      type="text"
      value="foo"
    />
  </div>
  <div
    class="form-group"
  >
    <label
      class="form-label"
      for="artist"
    >
      Artist
    </label>
    <input
      class="form-control"
      id="artist"
      name="artist"
      placeholder="Sir Mix-a-Lot"
      type="text"
      value="bar"
    />
  </div>
  <div
    class="form-group"
  >
    <label
      class="form-label"
      for="album"
    >
      Album
    </label>
    <input
      class="form-control"
      id="album"
      name="album"
      placeholder="Mack Daddy"
      type="text"
      value="baz"
    />
  </div>
  <div
    class="form-group"
  >
    <label
      class="form-label"
      for="category"
    >
      Category
    </label>
    <input
      class="form-control"
      id="category"
      list="categories"
      name="category"
      type="text"
      value="foo"
    />
    <datalist
      id="categories"
    >
      <option
        value="foo"
      />
      <option
        value="bar"
      />
    </datalist>
  </div>
  <div
    class="mb-3 form-group"
  >
    <div
      class="form-check"
    >
      <input
        class="form-check-input"
        id="purchased"
        name="purchased"
        type="checkbox"
      />
      <label
        class="form-check-label"
        for="purchased"
        title=""
      >
        Purchased
      </label>
    </div>
  </div>
</div>
`;
